<resources>
    <string name="app_name">CurrencyApp</string>
    <string name="title_converter">Converter</string>
    <string name="title_activity_chart">ChartActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_chart">Chart</string>
    <string name="day">3D</string>
    <string name="week">7D</string>
    <string name="month">1M</string>
    <string name="month_3">3M</string>
    <string name="month_6">6M</string>
    <string name="year">1Y</string>
    <string name="linear">Linear</string>
    <string name="column">Column</string>
</resources>